2009-12-09  Kaz Kylheku  <kkylheku@gmail.com>

	* hash.c (sethash): New function.

	* hash.h (sethash): Declared.

	* lib.c (cobj_handle): New function.

	* lib.h (cobj_handle): Declared.

2009-12-08  Kaz Kylheku  <kkylheku@gmail.com>

	All COBJ operations have default implementations now;
	no null pointer check over struct cobj_ops operations.

	New typechecking function for COBJ objects.

	* gc.c (finalize): Assume function pointer destroy
	is not null.
	(cobj_destroy_op): New function.
	(mark_obj): Assume function pointer mark is not null.
	(cobj_mark_op): New function.

	* hash.c (ll_hash): Assume function pointer hash
	is not null.
	(cobj_hash_op): New function.
	(hash_equal): Function removed.
	(hash_ops): Replaced hash_equal with cobj_equal_op.

	* lib.c (class_check, cobj_equal_op): New functions.

	* lib.h (cobj_equal_op, cobj_destroy_op, cobj_mark_op,
	cobj_hash_op): Declarations added.
	(system_package, user_package, class_check): Declaration added.

	* regex.c (regex_equal): Function removed.
	(regex_obj_ops): regex_equal replaced with cobj_equal_op.

	* stream.c (common_equal): Function removed.
	(stdio_ops, pipe_ops, string_in_ops, byte_in_ops,
	string_out_ops, dir_ops): common_equal replaced
	with cobj_equal_op, and all previously null
	function pointers populated with default functions.

2009-12-05  Kaz Kylheku  <kkylheku@gmail.com>

	More void * to mem_t * conversion.

	* stream.c (stdio_put_char_callback, stdio_get_char_callback,
	stdio_put_string, stdio_put_char, stdio_snarf_line, stdio_get_char):
	Convert void * to mem_t *.

	* utf8.c (utf8_encode, utf8_decode): Convert void * to mem_t *.

	* utf8.h (utf8_encode, utf8_decode): Update declarations.

2009-12-04  Kaz Kylheku  <kkylheku@gmail.com>

	Eliminate the void * disease. Generic pointers are of mem_t *
	from now on, which is compatible with unsigned char *.
	No implicit conversion to or from this type, in C or C++.

	* hash.c (make_hash): Convert void * to mem_t *.
